# alphazero-cpp

./: LICENSE  README.md
src/: CMakeLists.txt  GameTesting.cpp  InitPredictorTesting.cpp  MCTreePUCTTesting.cpp  MCTreeTesting.cpp  PlayerTesting.cpp  TorchTesting.cpp
src/game/: Game.cpp  Game.hpp
src/init_predictor/: InitPredictor.hpp  TicTacToeInitPredictor.hpp
src/player/: BruteForcePlayer.cpp  BruteForcePlayer.hpp  MCTreePUCTPlayer.cpp  MCTreePUCTPlayer.hpp  MCTreePlayer.cpp  MCTreePlayer.hpp  Player.hpp
src/state/: State.hpp  TestState.cpp  TestState.hpp  TicTacToeState.cpp  TicTacToeState.hpp
src/tree/: MCTree.cpp  MCTree.hpp  MCTreePUCT.cpp  MCTreePUCT.hpp
